--- a/workscreen.html
+++ b/workscreen.html
@@ -6,142 +6,173 @@
   <title>Solar Workscreen – Overview</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
 
   <style>
     :root {
-      --bg:        #0f1117;
-      --surface:   #161b22;
-      --surface-2: #1f2937;
-      --text:      #e2e8f0;
-      --text-dim:  #94a3b8;
-      --primary:   #f97316;
-      --success:   #10b981;
-      --warning:   #fbbf24;
-      --danger:    #f87171;
-      --info:      #60a5fa;
-      --border:    #334155;
+      --bg:           #0a0e1a;
+      --surface:      #111827;
+      --surface-hov:  #1e293b;
+      --accent:       #f97316;
+      --accent-soft:  rgba(249, 115, 22, 0.15);
+      --success:      #22c55e;
+      --warning:      #f59e0b;
+      --danger:       #ef4444;
+      --info:         #3b82f6;
+      --text:         #f1f5f9;
+      --text-dim:     #94a3b8;
+      --border:       rgba(148,163,184,0.12);
+      --shadow-sm:    0 4px 12px rgba(0,0,0,0.35);
+      --shadow-md:    0 10px 30px rgba(0,0,0,0.5);
     }
 
-    * { margin:0; padding:0; box-sizing:border-box; }
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
 
     body {
-      font-family: 'Inter', system-ui, sans-serif;
+      font-family: 'Inter', system-ui, -apple-system, sans-serif;
       background: var(--bg);
       color: var(--text);
       min-height: 100vh;
-      line-height: 1.6;
+      background: linear-gradient(135deg, #0a0e1a 0%, #0f172a 100%);
+      background-attachment: fixed;
     }
 
     .container {
       max-width: 1280px;
       margin: 0 auto;
-      padding: 2.5rem 1.5rem;
+      padding: 3rem 1.5rem;
     }
 
     header {
       text-align: center;
-      margin-bottom: 3rem;
+      margin-bottom: 4rem;
     }
 
     h1 {
-      font-size: 2.8rem;
+      font-size: 3.25rem;
       font-weight: 800;
-      letter-spacing: -0.8px;
-      color: var(--primary);
+      letter-spacing: -1.2px;
+      background: linear-gradient(90deg, var(--accent), #fb923c);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      background-clip: text;
     }
 
     .subtitle {
       color: var(--text-dim);
-      font-size: 1.15rem;
-      margin-top: 0.5rem;
+      font-size: 1.18rem;
+      font-weight: 400;
+      margin-top: 0.75rem;
     }
 
     .weekly-grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(360px, 1fr));
-      gap: 2rem;
-      margin-bottom: 3.5rem;
+      grid-template-columns: repeat(auto-fit, minmax(380px, 1fr));
+      gap: 2.25rem;
+      margin-bottom: 4.5rem;
     }
 
     .week-card {
       background: var(--surface);
       border: 1px solid var(--border);
-      border-radius: 16px;
-      padding: 2rem;
-      box-shadow: 0 6px 20px rgba(0,0,0,0.3);
-      transition: all 0.25s ease;
+      border-radius: 20px;
+      padding: 2.25rem;
+      box-shadow: var(--shadow-sm);
+      transition: all 0.35s cubic-bezier(0.16, 1, 0.3, 1);
       aspect-ratio: 1 / 1;
       display: flex;
       flex-direction: column;
-      justify-content: space-between;
+      position: relative;
+      overflow: hidden;
+    }
+
+    .week-card::after {
+      content: '';
+      position: absolute;
+      inset: 0;
+      background: radial-gradient(circle at 30% 20%, var(--accent-soft) 0%, transparent 60%);
+      opacity: 0;
+      transition: opacity 0.6s ease;
+      pointer-events: none;
     }
 
     .week-card:hover {
-      transform: translateY(-6px);
-      box-shadow: 0 16px 40px rgba(0,0,0,0.45);
-      border-color: var(--primary);
+      transform: translateY(-12px) scale(1.015);
+      box-shadow: var(--shadow-md);
+      border-color: rgba(249,115,22,0.4);
+    }
+
+    .week-card:hover::after {
+      opacity: 1;
     }
 
     .card-header {
       display: flex;
       justify-content: space-between;
       align-items: baseline;
-      margin-bottom: 1.25rem;
+      margin-bottom: 1.5rem;
     }
 
     .card-title {
-      font-size: 1.45rem;
+      font-size: 1.55rem;
       font-weight: 700;
+      letter-spacing: -0.4px;
     }
 
     .period {
-      font-size: 0.95rem;
+      font-size: 0.98rem;
       color: var(--text-dim);
       font-weight: 500;
     }
 
     .mega {
       text-align: center;
-      margin: 1rem 0 1.5rem;
+      margin: 2rem 0 1.75rem;
     }
 
     .mega-number {
-      font-size: 5.2rem;
+      font-size: 6.2rem;
       font-weight: 800;
-      line-height: 0.9;
-      letter-spacing: -3px;
-      color: var(--primary);
+      line-height: 0.82;
+      letter-spacing: -5px;
+      color: var(--accent);
     }
 
     .mega-label {
-      font-size: 1.2rem;
+      font-size: 1.3rem;
       color: var(--text-dim);
       font-weight: 500;
+      margin-top: 0.4rem;
     }
 
     .stats-row {
       display: grid;
       grid-template-columns: repeat(5, 1fr);
-      gap: 0.9rem;
-      margin: 1rem 0;
+      gap: 1rem;
+      margin: 1.25rem 0 1.75rem;
     }
 
     .stat {
-      background: var(--surface-2);
-      border-radius: 10px;
-      padding: 1rem 0.8rem;
+      background: rgba(30,41,59,0.4);
+      border-radius: 12px;
+      padding: 1.1rem 0.9rem;
       text-align: center;
+      border: 1px solid rgba(148,163,184,0.08);
     }
 
     .stat-label {
-      font-size: 0.85rem;
+      font-size: 0.84rem;
       color: var(--text-dim);
-      margin-bottom: 0.4rem;
+      margin-bottom: 0.45rem;
+      font-weight: 500;
     }
 
     .stat-value {
-      font-size: 2.05rem;
+      font-size: 2.25rem;
       font-weight: 700;
       line-height: 1;
     }
@@ -152,73 +183,72 @@
     .stat-value.cancelled   { color: var(--danger); }
 
     .jobtype-section {
-      margin-top: 1rem;
-      padding-top: 1.25rem;
-      border-top: 1px solid var(--border);
+      margin-top: 1.25rem;
     }
 
     .jobtype-title {
-      font-size: 1.05rem;
+      font-size: 1.1rem;
       font-weight: 600;
       color: var(--text-dim);
-      margin-bottom: 0.85rem;
+      margin-bottom: 1rem;
     }
 
     .jobtype-list {
       display: flex;
       flex-direction: column;
-      gap: 0.55rem;
-      font-size: 0.98rem;
+      gap: 0.65rem;
+      font-size: 1rem;
     }
 
     .jobtype-item {
       display: flex;
       justify-content: space-between;
+      font-weight: 500;
     }
 
     .jobtype-name  { color: var(--text); }
-    .jobtype-count { color: var(--primary); font-weight: 700; }
+    .jobtype-count { color: var(--accent); font-weight: 700; }
 
     .daily-grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(340px, 1fr));
-      gap: 2rem;
+      grid-template-columns: repeat(auto-fit, minmax(360px, 1fr));
+      gap: 2.25rem;
     }
 
     .daily-card {
       background: var(--surface);
       border: 1px solid var(--border);
-      border-radius: 14px;
-      padding: 1.75rem;
-      box-shadow: 0 4px 16px rgba(0,0,0,0.25);
+      border-radius: 16px;
+      padding: 2rem;
+      box-shadow: var(--shadow-sm);
     }
 
     .daily-header {
-      font-size: 1.3rem;
+      font-size: 1.4rem;
       font-weight: 700;
-      margin-bottom: 1.25rem;
+      margin-bottom: 1.5rem;
       display: flex;
       justify-content: space-between;
       align-items: baseline;
     }
 
     .daily-total {
-      font-size: 1.45rem;
-      color: var(--primary);
+      font-size: 1.55rem;
+      color: var(--accent);
     }
 
     .progress-container {
-      height: 1.75rem;
-      background: var(--surface-2);
+      height: 1.8rem;
+      background: rgba(30,41,59,0.5);
       border-radius: 10px;
       overflow: hidden;
       display: flex;
-      margin: 1.25rem 0 1rem;
+      margin: 1.5rem 0 1.25rem;
     }
 
     .progress-bar {
       height: 100%;
-      transition: width 0.5s ease;
+      transition: width 0.6s ease;
     }
 
     .bar.complete    { background: var(--success); }
@@ -229,31 +259,32 @@
     .daily-legend {
       display: flex;
       flex-wrap: wrap;
-      gap: 1.25rem 1.75rem;
-      font-size: 0.92rem;
+      gap: 1.5rem 2.25rem;
+      font-size: 0.95rem;
       color: var(--text-dim);
     }
 
     .legend-item {
       display: flex;
       align-items: center;
-      gap: 0.65rem;
+      gap: 0.75rem;
     }
 
     .legend-dot {
-      width: 12px;
-      height: 12px;
+      width: 13px;
+      height: 13px;
       border-radius: 50%;
     }
 
     @media (max-width: 1100px) {
       .weekly-grid { grid-template-columns: 1fr; }
-      .mega-number { font-size: 4.5rem; }
+      .mega-number { font-size: 5rem; }
     }
 
     @media (max-width: 640px) {
-      .stats-row { grid-template-columns: repeat(3, 1fr); gap: 0.8rem; }
-      .week-card { padding: 1.5rem; aspect-ratio: 1 / 1.15; }
+      .stats-row { grid-template-columns: repeat(3, 1fr); gap: 0.9rem; }
+      .week-card { padding: 1.75rem; aspect-ratio: 1 / 1.12; }
+      .mega-number { font-size: 4.2rem; }
     }
   </style>
 </head>
