--- a/workscreen.html
+++ b/workscreen.html
@@ -10,20 +10,18 @@
 
   <style>
     :root {
-      --bg:           #0a0e1a;
-      --surface:      #111827;
-      --surface-hov:  #1e293b;
-      --accent:       #f97316;
-      --accent-soft:  rgba(249, 115, 22, 0.15);
-      --success:      #22c55e;
-      --warning:      #f59e0b;
-      --danger:       #ef4444;
-      --info:         #3b82f6;
-      --text:         #f1f5f9;
-      --text-dim:     #94a3b8;
-      --border:       rgba(148,163,184,0.12);
-      --shadow-sm:    0 4px 12px rgba(0,0,0,0.35);
-      --shadow-md:    0 10px 30px rgba(0,0,0,0.5);
+      --bg: #0a0e1a;
+      --surface: #111827;
+      --surface-hover: #1e293b;
+      --text: #f1f5f9;
+      --text-dim: #94a3b8;
+      --primary: #f97316;
+      --success: #22c55e;
+      --warning: #f59e0b;
+      --danger: #ef4444;
+      --info: #3b82f6;
+      --border: #334155;
+      --shadow: 0 10px 30px rgba(0,0,0,0.5);
     }
 
     * {
@@ -33,258 +31,207 @@
     }
 
     body {
-      font-family: 'Inter', system-ui, -apple-system, sans-serif;
+      font-family: 'Inter', system-ui, sans-serif;
       background: var(--bg);
       color: var(--text);
       min-height: 100vh;
-      background: linear-gradient(135deg, #0a0e1a 0%, #0f172a 100%);
-      background-attachment: fixed;
+      line-height: 1.6;
     }
 
     .container {
-      max-width: 1280px;
+      max-width: 1200px;
       margin: 0 auto;
-      padding: 3rem 1.5rem;
+      padding: 2rem;
     }
 
     header {
       text-align: center;
-      margin-bottom: 4rem;
+      margin-bottom: 3rem;
     }
 
     h1 {
-      font-size: 3.25rem;
-      font-weight: 800;
-      letter-spacing: -1.2px;
-      background: linear-gradient(90deg, var(--accent), #fb923c);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      background-clip: text;
+      font-size: 2.5rem;
+      font-weight: 700;
+      color: var(--primary);
     }
 
     .subtitle {
       color: var(--text-dim);
-      font-size: 1.18rem;
-      font-weight: 400;
-      margin-top: 0.75rem;
+      font-size: 1rem;
     }
 
     .weekly-grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(380px, 1fr));
-      gap: 2.25rem;
-      margin-bottom: 4.5rem;
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+      gap: 1.5rem;
+      margin-bottom: 3rem;
     }
 
     .week-card {
       background: var(--surface);
       border: 1px solid var(--border);
-      border-radius: 20px;
-      padding: 2.25rem;
-      box-shadow: var(--shadow-sm);
-      transition: all 0.35s cubic-bezier(0.16, 1, 0.3, 1);
+      border-radius: 12px;
+      padding: 1.5rem;
+      box-shadow: var(--shadow);
+      transition: all 0.3s ease;
       aspect-ratio: 1 / 1;
       display: flex;
       flex-direction: column;
-      position: relative;
-      overflow: hidden;
-    }
-
-    .week-card::after {
-      content: '';
-      position: absolute;
-      inset: 0;
-      background: radial-gradient(circle at 30% 20%, var(--accent-soft) 0%, transparent 60%);
-      opacity: 0;
-      transition: opacity 0.6s ease;
-      pointer-events: none;
+      justify-content: space-between;
     }
 
     .week-card:hover {
-      transform: translateY(-12px) scale(1.015);
-      box-shadow: var(--shadow-md);
-      border-color: rgba(249,115,22,0.4);
-    }
-
-    .week-card:hover::after {
-      opacity: 1;
+      background: var(--surface-hover);
+      transform: translateY(-5px);
     }
 
     .card-header {
       display: flex;
       justify-content: space-between;
-      align-items: baseline;
-      margin-bottom: 1.5rem;
+      margin-bottom: 1rem;
     }
 
     .card-title {
-      font-size: 1.55rem;
-      font-weight: 700;
-      letter-spacing: -0.4px;
+      font-size: 1.2rem;
+      font-weight: 600;
     }
 
     .period {
-      font-size: 0.98rem;
+      font-size: 0.9rem;
       color: var(--text-dim);
-      font-weight: 500;
     }
 
     .mega {
       text-align: center;
-      margin: 2rem 0 1.75rem;
+      margin: 1rem 0;
     }
 
     .mega-number {
-      font-size: 6.2rem;
+      font-size: 3rem;
       font-weight: 800;
-      line-height: 0.82;
-      letter-spacing: -5px;
-      color: var(--accent);
+      color: var(--primary);
     }
 
     .mega-label {
-      font-size: 1.3rem;
+      font-size: 1rem;
       color: var(--text-dim);
-      font-weight: 500;
-      margin-top: 0.4rem;
     }
 
     .stats-row {
       display: grid;
       grid-template-columns: repeat(5, 1fr);
-      gap: 1rem;
-      margin: 1.25rem 0 1.75rem;
+      gap: 0.5rem;
+      margin-bottom: 1rem;
     }
 
     .stat {
-      background: rgba(30,41,59,0.4);
-      border-radius: 12px;
-      padding: 1.1rem 0.9rem;
       text-align: center;
-      border: 1px solid rgba(148,163,184,0.08);
     }
 
     .stat-label {
-      font-size: 0.84rem;
+      font-size: 0.8rem;
       color: var(--text-dim);
-      margin-bottom: 0.45rem;
-      font-weight: 500;
     }
 
     .stat-value {
-      font-size: 2.25rem;
+      font-size: 1.5rem;
       font-weight: 700;
-      line-height: 1;
     }
 
-    .stat-value.complete    { color: var(--success); }
-    .stat-value.inprogress  { color: var(--info); }
-    .stat-value.aborted     { color: var(--warning); }
-    .stat-value.cancelled   { color: var(--danger); }
+    .stat-value.complete { color: var(--success); }
+    .stat-value.inprogress { color: var(--info); }
+    .stat-value.aborted { color: var(--warning); }
+    .stat-value.cancelled { color: var(--danger); }
 
     .jobtype-section {
-      margin-top: 1.25rem;
+      margin-top: 1rem;
     }
 
     .jobtype-title {
-      font-size: 1.1rem;
+      font-size: 1rem;
       font-weight: 600;
       color: var(--text-dim);
-      margin-bottom: 1rem;
+      margin-bottom: 0.5rem;
     }
 
     .jobtype-list {
       display: flex;
       flex-direction: column;
-      gap: 0.65rem;
-      font-size: 1rem;
+      gap: 0.3rem;
+      font-size: 0.9rem;
     }
 
     .jobtype-item {
       display: flex;
       justify-content: space-between;
-      font-weight: 500;
     }
 
-    .jobtype-name  { color: var(--text); }
-    .jobtype-count { color: var(--accent); font-weight: 700; }
+    .jobtype-name { color: var(--text); }
+    .jobtype-count { color: var(--primary); font-weight: 600; }
 
     .daily-grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(360px, 1fr));
-      gap: 2.25rem;
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+      gap: 1.5rem;
     }
 
     .daily-card {
       background: var(--surface);
       border: 1px solid var(--border);
-      border-radius: 16px;
-      padding: 2rem;
-      box-shadow: var(--shadow-sm);
+      border-radius: 12px;
+      padding: 1.5rem;
+      box-shadow: var(--shadow);
     }
 
     .daily-header {
-      font-size: 1.4rem;
-      font-weight: 700;
-      margin-bottom: 1.5rem;
+      font-size: 1.2rem;
+      font-weight: 600;
+      margin-bottom: 1rem;
       display: flex;
       justify-content: space-between;
-      align-items: baseline;
     }
 
     .daily-total {
-      font-size: 1.55rem;
-      color: var(--accent);
+      font-size: 1.3rem;
+      color: var(--primary);
     }
 
     .progress-container {
-      height: 1.8rem;
-      background: rgba(30,41,59,0.5);
-      border-radius: 10px;
+      height: 1.5rem;
+      background: var(--surface-2);
+      border-radius: 8px;
       overflow: hidden;
       display: flex;
-      margin: 1.5rem 0 1.25rem;
+      margin-bottom: 1rem;
     }
 
     .progress-bar {
       height: 100%;
-      transition: width 0.6s ease;
     }
 
-    .bar.complete    { background: var(--success); }
-    .bar.inprogress  { background: var(--info); }
-    .bar.aborted     { background: var(--warning); }
-    .bar.cancelled   { background: var(--danger); }
+    .bar.complete { background: var(--success); }
+    .bar.inprogress { background: var(--info); }
+    .bar.aborted { background: var(--warning); }
+    .bar.cancelled { background: var(--danger); }
 
     .daily-legend {
       display: flex;
       flex-wrap: wrap;
-      gap: 1.5rem 2.25rem;
-      font-size: 0.95rem;
+      gap: 1rem;
+      font-size: 0.8rem;
       color: var(--text-dim);
     }
 
     .legend-item {
       display: flex;
       align-items: center;
-      gap: 0.75rem;
+      gap: 0.5rem;
     }
 
     .legend-dot {
-      width: 13px;
-      height: 13px;
+      width: 10px;
+      height: 10px;
       border-radius: 50%;
-    }
-
-    @media (max-width: 1100px) {
-      .weekly-grid { grid-template-columns: 1fr; }
-      .mega-number { font-size: 5rem; }
-    }
-
-    @media (max-width: 640px) {
-      .stats-row { grid-template-columns: repeat(3, 1fr); gap: 0.9rem; }
-      .week-card { padding: 1.75rem; aspect-ratio: 1 / 1.12; }
-      .mega-number { font-size: 4.2rem; }
     }
   </style>
 </head>
