--- a/workscreen.html
+++ b/workscreen.html
@@ -6,22 +6,30 @@
   <title>Solar Workscreen – Overview</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
   <style>
     :root {
-      --bg: #0a0e1a;
-      --surface: #111827;
-      --surface-hover: #1e293b;
-      --text: #f1f5f9;
+      --bg-start: #0a0e1a;
+      --bg-end: #1a1f35;
+      --surface: linear-gradient(135deg, #1e293b 0%, #0f172a 100%);
+      --surface-hover: linear-gradient(135deg, #334155 0%, #1e293b 100%);
+      --text: #f8fafc;
       --text-dim: #94a3b8;
       --primary: #f97316;
+      --primary-light: #fb923c;
+      --primary-glow: rgba(249, 115, 22, 0.3);
       --success: #22c55e;
+      --success-glow: rgba(34, 197, 94, 0.2);
       --warning: #f59e0b;
+      --warning-glow: rgba(245, 158, 11, 0.2);
       --danger: #ef4444;
+      --danger-glow: rgba(239, 68, 68, 0.2);
       --info: #3b82f6;
-      --border: #334155;
-      --shadow: 0 10px 30px rgba(0,0,0,0.5);
+      --info-glow: rgba(59, 130, 246, 0.2);
+      --border: rgba(148, 163, 184, 0.1);
+      --border-bright: rgba(148, 163, 184, 0.3);
+      --glow: 0 0 40px rgba(249, 115, 22, 0.15);
     }
 
     * {
@@ -30,195 +38,446 @@
       box-sizing: border-box;
     }
 
+    @keyframes gradientShift {
+      0%, 100% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+    }
+
+    @keyframes float {
+      0%, 100% { transform: translateY(0px); }
+      50% { transform: translateY(-10px); }
+    }
+
+    @keyframes fadeInUp {
+      from {
+        opacity: 0;
+        transform: translateY(30px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    @keyframes shimmer {
+      0% { background-position: -1000px 0; }
+      100% { background-position: 1000px 0; }
+    }
+
+    @keyframes pulse {
+      0%, 100% { opacity: 1; }
+      50% { opacity: 0.7; }
+    }
+
     body {
-      font-family: 'Inter', system-ui, sans-serif;
-      background: var(--bg);
+      font-family: 'Inter', system-ui, -apple-system, sans-serif;
+      background: linear-gradient(135deg, var(--bg-start) 0%, var(--bg-end) 100%);
+      background-attachment: fixed;
       color: var(--text);
       min-height: 100vh;
       line-height: 1.6;
+      position: relative;
+      overflow-x: hidden;
+    }
+
+    body::before {
+      content: '';
+      position: fixed;
+      top: -50%;
+      left: -50%;
+      width: 200%;
+      height: 200%;
+      background: radial-gradient(circle at 20% 50%, rgba(249, 115, 22, 0.05) 0%, transparent 50%),
+                  radial-gradient(circle at 80% 80%, rgba(59, 130, 246, 0.05) 0%, transparent 50%);
+      animation: float 20s ease-in-out infinite;
+      pointer-events: none;
+      z-index: 0;
     }
 
     .container {
-      max-width: 1200px;
+      max-width: 1400px;
       margin: 0 auto;
-      padding: 2rem;
+      padding: 3rem 2rem;
+      position: relative;
+      z-index: 1;
     }
 
     header {
       text-align: center;
-      margin-bottom: 3rem;
+      margin-bottom: 4rem;
+      animation: fadeInUp 0.8s ease-out;
     }
 
     h1 {
-      font-size: 2.5rem;
-      font-weight: 700;
-      color: var(--primary);
+      font-size: 3.5rem;
+      font-weight: 900;
+      background: linear-gradient(135deg, var(--primary) 0%, var(--primary-light) 100%);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      background-clip: text;
+      margin-bottom: 0.5rem;
+      letter-spacing: -0.02em;
+      text-shadow: 0 0 80px var(--primary-glow);
     }
 
     .subtitle {
       color: var(--text-dim);
-      font-size: 1rem;
+      font-size: 1.1rem;
+      font-weight: 500;
+      letter-spacing: 0.05em;
+      text-transform: uppercase;
+    }
+
+    .subtitle::before,
+    .subtitle::after {
+      content: '•';
+      margin: 0 1rem;
+      color: var(--primary);
     }
 
     .weekly-grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-      gap: 1.5rem;
-      margin-bottom: 3rem;
+      grid-template-columns: repeat(auto-fit, minmax(340px, 1fr));
+      gap: 2rem;
+      margin-bottom: 4rem;
     }
 
     .week-card {
       background: var(--surface);
       border: 1px solid var(--border);
-      border-radius: 12px;
-      padding: 1.5rem;
-      box-shadow: var(--shadow);
-      transition: all 0.3s ease;
+      border-radius: 24px;
+      padding: 2rem;
+      box-shadow: 0 20px 60px rgba(0,0,0,0.3),
+                  inset 0 1px 0 rgba(255,255,255,0.05);
+      transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
       aspect-ratio: 1 / 1;
       display: flex;
       flex-direction: column;
       justify-content: space-between;
+      position: relative;
+      overflow: hidden;
+      animation: fadeInUp 0.8s ease-out backwards;
+    }
+
+    .week-card:nth-child(1) { animation-delay: 0.1s; }
+    .week-card:nth-child(2) { animation-delay: 0.2s; }
+    .week-card:nth-child(3) { animation-delay: 0.3s; }
+
+    .week-card::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      height: 4px;
+      background: linear-gradient(90deg, var(--primary), var(--primary-light));
+      opacity: 0;
+      transition: opacity 0.4s;
     }
 
     .week-card:hover {
-      background: var(--surface-hover);
-      transform: translateY(-5px);
+      transform: translateY(-8px) scale(1.02);
+      border-color: var(--border-bright);
+      box-shadow: 0 30px 80px rgba(0,0,0,0.4),
+                  0 0 0 1px rgba(249, 115, 22, 0.2),
+                  var(--glow);
+    }
+
+    .week-card:hover::before {
+      opacity: 1;
     }
 
     .card-header {
       display: flex;
       justify-content: space-between;
-      margin-bottom: 1rem;
+      align-items: flex-start;
+      margin-bottom: 1.5rem;
     }
 
     .card-title {
-      font-size: 1.2rem;
-      font-weight: 600;
+      font-size: 1.3rem;
+      font-weight: 700;
+      letter-spacing: -0.01em;
     }
 
     .period {
-      font-size: 0.9rem;
+      font-size: 0.85rem;
       color: var(--text-dim);
+      background: rgba(148, 163, 184, 0.1);
+      padding: 0.25rem 0.75rem;
+      border-radius: 8px;
+      font-weight: 500;
     }
 
     .mega {
       text-align: center;
-      margin: 1rem 0;
+      margin: 1.5rem 0;
+      padding: 1.5rem;
+      background: rgba(249, 115, 22, 0.05);
+      border-radius: 16px;
+      border: 1px solid rgba(249, 115, 22, 0.1);
+      position: relative;
+    }
+
+    .mega::before {
+      content: '';
+      position: absolute;
+      inset: 0;
+      border-radius: 16px;
+      padding: 1px;
+      background: linear-gradient(135deg, var(--primary), transparent);
+      -webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
+      -webkit-mask-composite: xor;
+      mask-composite: exclude;
+      opacity: 0.5;
     }
 
     .mega-number {
-      font-size: 3rem;
-      font-weight: 800;
-      color: var(--primary);
+      font-size: 4rem;
+      font-weight: 900;
+      background: linear-gradient(135deg, var(--primary) 0%, var(--primary-light) 100%);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      background-clip: text;
+      line-height: 1;
+      margin-bottom: 0.5rem;
+      text-shadow: 0 0 40px var(--primary-glow);
     }
 
     .mega-label {
-      font-size: 1rem;
+      font-size: 0.9rem;
       color: var(--text-dim);
+      font-weight: 600;
+      text-transform: uppercase;
+      letter-spacing: 0.1em;
     }
 
     .stats-row {
       display: grid;
       grid-template-columns: repeat(5, 1fr);
-      gap: 0.5rem;
-      margin-bottom: 1rem;
+      gap: 0.75rem;
+      margin-bottom: 1.5rem;
     }
 
     .stat {
       text-align: center;
+      padding: 0.75rem 0.5rem;
+      background: rgba(255, 255, 255, 0.02);
+      border-radius: 12px;
+      border: 1px solid var(--border);
+      transition: all 0.3s;
+    }
+
+    .stat:hover {
+      background: rgba(255, 255, 255, 0.05);
+      transform: translateY(-2px);
     }
 
     .stat-label {
-      font-size: 0.8rem;
+      font-size: 0.7rem;
       color: var(--text-dim);
+      text-transform: uppercase;
+      letter-spacing: 0.05em;
+      margin-bottom: 0.25rem;
+      font-weight: 600;
     }
 
     .stat-value {
-      font-size: 1.5rem;
-      font-weight: 700;
+      font-size: 1.75rem;
+      font-weight: 800;
+      line-height: 1;
     }
 
-    .stat-value.complete { color: var(--success); }
-    .stat-value.inprogress { color: var(--info); }
-    .stat-value.aborted { color: var(--warning); }
-    .stat-value.cancelled { color: var(--danger); }
+    .stat-value.complete { 
+      color: var(--success);
+      text-shadow: 0 0 20px var(--success-glow);
+    }
+    .stat-value.inprogress { 
+      color: var(--info);
+      text-shadow: 0 0 20px var(--info-glow);
+    }
+    .stat-value.aborted { 
+      color: var(--warning);
+      text-shadow: 0 0 20px var(--warning-glow);
+    }
+    .stat-value.cancelled { 
+      color: var(--danger);
+      text-shadow: 0 0 20px var(--danger-glow);
+    }
 
     .jobtype-section {
-      margin-top: 1rem;
+      margin-top: 1.5rem;
+      padding: 1.25rem;
+      background: rgba(255, 255, 255, 0.02);
+      border-radius: 16px;
+      border: 1px solid var(--border);
     }
 
     .jobtype-title {
-      font-size: 1rem;
-      font-weight: 600;
+      font-size: 0.85rem;
+      font-weight: 700;
       color: var(--text-dim);
-      margin-bottom: 0.5rem;
+      margin-bottom: 1rem;
+      text-transform: uppercase;
+      letter-spacing: 0.1em;
     }
 
     .jobtype-list {
       display: flex;
       flex-direction: column;
-      gap: 0.3rem;
+      gap: 0.5rem;
       font-size: 0.9rem;
     }
 
     .jobtype-item {
       display: flex;
       justify-content: space-between;
+      align-items: center;
+      padding: 0.5rem 0.75rem;
+      background: rgba(255, 255, 255, 0.02);
+      border-radius: 8px;
+      transition: all 0.2s;
     }
 
-    .jobtype-name { color: var(--text); }
-    .jobtype-count { color: var(--primary); font-weight: 600; }
+    .jobtype-item:hover {
+      background: rgba(249, 115, 22, 0.1);
+      transform: translateX(4px);
+    }
+
+    .jobtype-name { 
+      color: var(--text);
+      font-weight: 500;
+    }
+    .jobtype-count { 
+      color: var(--primary);
+      font-weight: 700;
+      font-size: 1.1rem;
+      min-width: 30px;
+      text-align: right;
+    }
 
     .daily-grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-      gap: 1.5rem;
+      grid-template-columns: repeat(auto-fit, minmax(340px, 1fr));
+      gap: 2rem;
     }
 
     .daily-card {
       background: var(--surface);
       border: 1px solid var(--border);
-      border-radius: 12px;
-      padding: 1.5rem;
-      box-shadow: var(--shadow);
+      border-radius: 24px;
+      padding: 2rem;
+      box-shadow: 0 20px 60px rgba(0,0,0,0.3),
+                  inset 0 1px 0 rgba(255,255,255,0.05);
+      transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+      animation: fadeInUp 0.8s ease-out backwards;
+      position: relative;
+      overflow: hidden;
+    }
+
+    .daily-card::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      height: 3px;
+      background: linear-gradient(90deg, 
+        var(--success) 0%, 
+        var(--info) 33%, 
+        var(--warning) 66%, 
+        var(--danger) 100%);
+      opacity: 0;
+      transition: opacity 0.4s;
+    }
+
+    .daily-card:hover {
+      transform: translateY(-5px);
+      border-color: var(--border-bright);
+      box-shadow: 0 30px 80px rgba(0,0,0,0.4),
+                  0 0 0 1px rgba(148, 163, 184, 0.1);
+    }
+
+    .daily-card:hover::before {
+      opacity: 1;
     }
 
     .daily-header {
-      font-size: 1.2rem;
-      font-weight: 600;
-      margin-bottom: 1rem;
+      font-size: 1.3rem;
+      font-weight: 700;
+      margin-bottom: 1.5rem;
       display: flex;
       justify-content: space-between;
+      align-items: center;
+      letter-spacing: -0.01em;
     }
 
     .daily-total {
-      font-size: 1.3rem;
+      font-size: 1.4rem;
       color: var(--primary);
+      font-weight: 800;
+      background: rgba(249, 115, 22, 0.1);
+      padding: 0.25rem 0.75rem;
+      border-radius: 8px;
     }
 
     .progress-container {
-      height: 1.5rem;
-      background: var(--surface-2);
-      border-radius: 8px;
+      height: 2rem;
+      background: rgba(15, 23, 42, 0.5);
+      border-radius: 12px;
       overflow: hidden;
       display: flex;
-      margin-bottom: 1rem;
+      margin-bottom: 1.5rem;
+      border: 1px solid var(--border);
+      box-shadow: inset 0 2px 8px rgba(0,0,0,0.3);
+      position: relative;
     }
 
     .progress-bar {
       height: 100%;
+      transition: width 0.6s cubic-bezier(0.4, 0, 0.2, 1);
+      position: relative;
+      overflow: hidden;
     }
 
-    .bar.complete { background: var(--success); }
-    .bar.inprogress { background: var(--info); }
-    .bar.aborted { background: var(--warning); }
-    .bar.cancelled { background: var(--danger); }
+    .progress-bar::after {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      bottom: 0;
+      right: 0;
+      background: linear-gradient(
+        90deg,
+        transparent 0%,
+        rgba(255,255,255,0.2) 50%,
+        transparent 100%
+      );
+      animation: shimmer 2s infinite;
+    }
+
+    .progress-bar.complete { 
+      background: linear-gradient(135deg, var(--success) 0%, #16a34a 100%);
+      box-shadow: 0 0 20px var(--success-glow);
+    }
+    .progress-bar.inprogress { 
+      background: linear-gradient(135deg, var(--info) 0%, #2563eb 100%);
+      box-shadow: 0 0 20px var(--info-glow);
+    }
+    .progress-bar.aborted { 
+      background: linear-gradient(135deg, var(--warning) 0%, #d97706 100%);
+      box-shadow: 0 0 20px var(--warning-glow);
+    }
+    .progress-bar.cancelled { 
+      background: linear-gradient(135deg, var(--danger) 0%, #dc2626 100%);
+      box-shadow: 0 0 20px var(--danger-glow);
+    }
 
     .daily-legend {
       display: flex;
       flex-wrap: wrap;
-      gap: 1rem;
-      font-size: 0.8rem;
+      gap: 1.25rem;
+      font-size: 0.85rem;
       color: var(--text-dim);
     }
 
@@ -226,12 +485,57 @@
       display: flex;
       align-items: center;
       gap: 0.5rem;
+      font-weight: 600;
+      padding: 0.5rem 0.75rem;
+      background: rgba(255, 255, 255, 0.02);
+      border-radius: 8px;
+      transition: all 0.2s;
+    }
+
+    .legend-item:hover {
+      background: rgba(255, 255, 255, 0.05);
+      transform: translateY(-2px);
     }
 
     .legend-dot {
-      width: 10px;
-      height: 10px;
+      width: 12px;
+      height: 12px;
       border-radius: 50%;
+      box-shadow: 0 0 10px currentColor;
+      animation: pulse 2s ease-in-out infinite;
+    }
+
+    .empty-state {
+      text-align: center;
+      color: var(--text-dim);
+      padding: 6rem 2rem;
+      font-size: 1.2rem;
+      background: var(--surface);
+      border-radius: 24px;
+      border: 1px dashed var(--border);
+      animation: fadeInUp 0.8s ease-out;
+    }
+
+    .empty-state::before {
+      content: '📅';
+      display: block;
+      font-size: 4rem;
+      margin-bottom: 1rem;
+      opacity: 0.5;
+    }
+
+    @media (max-width: 768px) {
+      h1 { font-size: 2.5rem; }
+      .container { padding: 2rem 1rem; }
+      .weekly-grid, .daily-grid {
+        grid-template-columns: 1fr;
+      }
+      .stats-row {
+        grid-template-columns: repeat(2, 1fr);
+      }
+      .stat:last-child {
+        grid-column: 1 / -1;
+      }
     }
   </style>
 </head>
@@ -372,19 +676,19 @@
               <div class="stat-value">${s.totalJobs}</div>
             </div>
             <div class="stat">
-              <div class="stat-label">Completed</div>
+              <div class="stat-label">Done</div>
               <div class="stat-value complete">${s.completed}</div>
             </div>
             <div class="stat">
-              <div class="stat-label">In Progress</div>
+              <div class="stat-label">Active</div>
               <div class="stat-value inprogress">${s.inprogress}</div>
             </div>
             <div class="stat">
-              <div class="stat-label">Aborted</div>
+              <div class="stat-label">Abort</div>
               <div class="stat-value aborted">${s.aborted}</div>
             </div>
             <div class="stat">
-              <div class="stat-label">Cancelled</div>
+              <div class="stat-label">Cancel</div>
               <div class="stat-value cancelled">${s.cancelled}</div>
             </div>
           </div>
@@ -412,7 +716,7 @@
         <div class="daily-card">
           <div class="daily-header">
             ${new Date(d.date).toLocaleDateString('en-GB', { weekday:'long', day:'numeric', month:'short' })}
-            <span class="daily-total">${d.total} jobs</span>
+            <span class="daily-total">${d.total}</span>
           </div>
 
           <div class="progress-container">
@@ -433,7 +737,7 @@
     }).filter(Boolean);
 
     document.getElementById('daily-breakdown').innerHTML =
-      dailyHtml.length ? dailyHtml.join('') : '<p style="text-align:center; color:var(--text-dim); padding:4rem 0; font-size:1.1rem;">No jobs scheduled this week</p>';
+      dailyHtml.length ? dailyHtml.join('') : '<div class="empty-state">No jobs scheduled this week</div>';
   }
 
   function formatWeek(offset) {
