--- a/workscreen.html
+++ b/workscreen.html
@@ -39,39 +39,41 @@
     }
 
     .container {
-      max-width: 1200px;
+      max-width: 1400px;
       margin: 0 auto;
-      padding: 2rem;
+      padding: 2.5rem 1.5rem;
     }
 
     header {
       text-align: center;
-      margin-bottom: 3rem;
+      margin-bottom: 3.5rem;
     }
 
     h1 {
-      font-size: 2.5rem;
-      font-weight: 700;
+      font-size: 3rem;
+      font-weight: 800;
       color: var(--primary);
+      letter-spacing: -1px;
     }
 
     .subtitle {
       color: var(--text-dim);
-      font-size: 1rem;
+      font-size: 1.1rem;
+      margin-top: 0.75rem;
     }
 
     .weekly-grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-      gap: 1.5rem;
-      margin-bottom: 3rem;
+      grid-template-columns: repeat(auto-fit, minmax(420px, 1fr));
+      gap: 2.5rem;
+      margin-bottom: 4rem;
     }
 
     .week-card {
       background: var(--surface);
       border: 1px solid var(--border);
-      border-radius: 12px;
-      padding: 1.5rem;
+      border-radius: 16px;
+      padding: 2.5rem;
       box-shadow: var(--shadow);
       transition: all 0.3s ease;
       aspect-ratio: 1 / 1;
@@ -82,46 +84,54 @@
 
     .week-card:hover {
       background: var(--surface-hover);
-      transform: translateY(-5px);
+      transform: translateY(-8px);
+      box-shadow: 0 20px 50px rgba(0,0,0,0.6);
     }
 
     .card-header {
       display: flex;
       justify-content: space-between;
-      margin-bottom: 1rem;
+      align-items: baseline;
+      margin-bottom: 1.5rem;
     }
 
     .card-title {
-      font-size: 1.2rem;
-      font-weight: 600;
+      font-size: 1.5rem;
+      font-weight: 700;
     }
 
     .period {
-      font-size: 0.9rem;
+      font-size: 1rem;
       color: var(--text-dim);
+      font-weight: 500;
     }
 
     .mega {
       text-align: center;
-      margin: 1rem 0;
+      margin: 1.5rem 0 2rem;
     }
 
     .mega-number {
-      font-size: 3rem;
-      font-weight: 800;
+      font-size: 5.5rem;
+      font-weight: 900;
+      line-height: 1;
       color: var(--primary);
+      letter-spacing: -3px;
     }
 
     .mega-label {
-      font-size: 1rem;
+      font-size: 1.25rem;
       color: var(--text-dim);
+      font-weight: 500;
+      text-transform: uppercase;
+      letter-spacing: 1px;
     }
 
     .stats-row {
       display: grid;
       grid-template-columns: repeat(5, 1fr);
-      gap: 0.5rem;
-      margin-bottom: 1rem;
+      gap: 1rem;
+      margin-bottom: 1.5rem;
     }
 
     .stat {
@@ -129,13 +139,17 @@
     }
 
     .stat-label {
-      font-size: 0.8rem;
+      font-size: 0.85rem;
       color: var(--text-dim);
+      margin-bottom: 0.4rem;
+      text-transform: uppercase;
+      letter-spacing: 0.5px;
     }
 
     .stat-value {
-      font-size: 1.5rem;
-      font-weight: 700;
+      font-size: 2.2rem;
+      font-weight: 800;
+      line-height: 1;
     }
 
     .stat-value.complete { color: var(--success); }
@@ -148,17 +162,19 @@
     }
 
     .jobtype-title {
-      font-size: 1rem;
+      font-size: 1.1rem;
       font-weight: 600;
       color: var(--text-dim);
-      margin-bottom: 0.5rem;
+      margin-bottom: 0.75rem;
+      text-transform: uppercase;
+      letter-spacing: 0.5px;
     }
 
     .jobtype-list {
       display: flex;
       flex-direction: column;
-      gap: 0.3rem;
-      font-size: 0.9rem;
+      gap: 0.5rem;
+      font-size: 1rem;
     }
 
     .jobtype-item {
@@ -166,47 +182,50 @@
       justify-content: space-between;
     }
 
-    .jobtype-name { color: var(--text); }
-    .jobtype-count { color: var(--primary); font-weight: 600; }
+    .jobtype-name { color: var(--text); font-weight: 500; }
+    .jobtype-count { color: var(--primary); font-weight: 700; }
 
     .daily-grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-      gap: 1.5rem;
+      grid-template-columns: repeat(auto-fit, minmax(340px, 1fr));
+      gap: 2rem;
     }
 
     .daily-card {
       background: var(--surface);
       border: 1px solid var(--border);
-      border-radius: 12px;
-      padding: 1.5rem;
+      border-radius: 16px;
+      padding: 2rem;
       box-shadow: var(--shadow);
     }
 
     .daily-header {
-      font-size: 1.2rem;
-      font-weight: 600;
-      margin-bottom: 1rem;
+      font-size: 1.4rem;
+      font-weight: 700;
+      margin-bottom: 1.5rem;
       display: flex;
       justify-content: space-between;
+      align-items: baseline;
     }
 
     .daily-total {
-      font-size: 1.3rem;
+      font-size: 1.6rem;
       color: var(--primary);
+      font-weight: 800;
     }
 
     .progress-container {
-      height: 1.5rem;
-      background: var(--surface-2);
-      border-radius: 8px;
+      height: 1.8rem;
+      background: var(--surface-hover);
+      border-radius: 10px;
       overflow: hidden;
       display: flex;
-      margin-bottom: 1rem;
+      margin-bottom: 1.25rem;
     }
 
     .progress-bar {
       height: 100%;
+      transition: width 0.5s ease;
     }
 
     .bar.complete { background: var(--success); }
@@ -217,21 +236,32 @@
     .daily-legend {
       display: flex;
       flex-wrap: wrap;
-      gap: 1rem;
-      font-size: 0.8rem;
+      gap: 1.25rem 1.75rem;
+      font-size: 0.95rem;
       color: var(--text-dim);
     }
 
     .legend-item {
       display: flex;
       align-items: center;
-      gap: 0.5rem;
+      gap: 0.75rem;
     }
 
     .legend-dot {
-      width: 10px;
-      height: 10px;
+      width: 12px;
+      height: 12px;
       border-radius: 50%;
+    }
+
+    @media (max-width: 1100px) {
+      .weekly-grid { grid-template-columns: 1fr; }
+      .mega-number { font-size: 4.5rem; }
+    }
+
+    @media (max-width: 640px) {
+      .stats-row { grid-template-columns: repeat(3, 1fr); }
+      .week-card { padding: 1.75rem; aspect-ratio: 1 / 1.15; }
+      .mega-number { font-size: 4rem; }
     }
   </style>
 </head>
@@ -297,8 +327,8 @@
     const { days } = getWeekRange(offset);
     const weekEntries = entries.filter(e => days.includes(e.Date));
 
-    // Unique postcodes
-    const uniquePostcodes = new Set(weekEntries.map(e => e.Postcode)).size;
+    // Unique postcodes (distinct Postcodes)
+    const uniquePostcodes = new Set(weekEntries.map(e => e.Postcode?.trim().toUpperCase())).size;
 
     const totalJobs     = weekEntries.length;
     const completed     = weekEntries.filter(e => e.Status === 'complete').length;
