--- a/admin.html
+++ b/admin.html
@@ -769,6 +769,10 @@
                             <input type="text" class="form-input" id="lead-engineer" required>
                         </div>
                         <div class="form-group">
+                            <label class="form-label">Team Number *</label>
+                            <input type="text" class="form-input" id="lead-Team" required>
+                        </div>
+                        <div class="form-group">
                             <label class="form-label">Job Length (days) *</label>
                             <input type="number" class="form-input" id="job-length" required>
                         </div>
