--- a/viewtimeline.html
+++ b/viewtimeline.html
@@ -564,7 +564,7 @@
         <header>
             <div class="header-content">
                 <a href="index.html" class="logo">Pingu - Solar</a>
-                <a href="index.html" class="back-btn">← Back to Home</a>
+                <a href="admin.html" class="back-btn">← Back to Home</a>
             </div>
             <h1>Job Timeline</h1>
             <p class="subtitle">Visual schedule of upcoming jobs by engineer - drag to reschedule</p>
