--- a/admin.html
+++ b/admin.html
@@ -699,6 +699,12 @@
                     <div class="action-title">View Timeline</div>
                     <div class="action-description">See all jobs in chronological order</div>
                 </div>
+
+                <div class="action-card" onclick="window.location.href='https://pingu-blue.vercel.app/map.html'">
+                    <div class="action-icon">🗺️</div>
+                    <div class="action-title">View Jobs Map</div>
+                    <div class="action-description">See job locations on an interactive map</div>
+                </div>
                
                 <div class="action-card" onclick="showSection('amend-jobs')">
                     <div class="action-icon">✏️</div>
