--- a/map.html
+++ b/map.html
@@ -393,7 +393,7 @@
         <header>
             <div class="header-content">
                 <a href="index.html" class="logo">Pingu - Solar</a>
-                <a href="index.html" class="back-btn">← Back to Home</a>
+                <a href="admin.html" class="back-btn">← Back to Home</a>
             </div>
             <h1>Job Location Heat Map</h1>
             <p class="subtitle">Visualize upcoming job locations across the UK</p>
