--- a/adminupload.html
+++ b/adminupload.html
@@ -247,7 +247,7 @@
         <a href="admin.html" class="logo">Pingu Solar</a>
         <h1>Mass Job Upload (CSV)</h1>
         <p class="subtitle">Upload multiple jobs at once from a CSV file</p>
-        <a href="index.html" class="back-home">← Back to Home</a>
+        <a href="admin.html" class="back-home">← Back to Home</a>
     </header>
 
     <div class="upload-card">
