--- a/adminupload.html
+++ b/adminupload.html
@@ -20,13 +20,11 @@
             --error: #FF6B6B;
             --shadow: rgba(255, 107, 53, 0.3);
         }
-
         * {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
         }
-
         body {
             font-family: 'JetBrains Mono', monospace;
             background: var(--dark);
@@ -35,17 +33,14 @@
             min-height: 100vh;
             padding: 2rem;
         }
-
         .container {
             max-width: 1100px;
             margin: 0 auto;
         }
-
         header {
             text-align: center;
             margin-bottom: 2.5rem;
         }
-
         .logo {
             font-family: 'Syne', sans-serif;
             font-size: 2.8rem;
@@ -57,18 +52,15 @@
             display: inline-block;
             text-decoration: none;
         }
-
         h1 {
             font-family: 'Syne', sans-serif;
             font-size: 2.2rem;
             margin-bottom: 0.5rem;
         }
-
         .subtitle {
             color: var(--text-dim);
             font-size: 1rem;
         }
-
         .back-home {
             display: inline-block;
             margin-top: 1rem;
@@ -81,13 +73,11 @@
             transition: all 0.3s;
             font-weight: 600;
         }
-
         .back-home:hover {
             background: var(--primary);
             color: white;
             transform: translateY(-2px);
         }
-
         .upload-card {
             background: var(--dark-light);
             border-radius: 16px;
@@ -96,11 +86,9 @@
             transition: all 0.3s ease;
             box-shadow: 0 8px 30px rgba(0,0,0,0.4);
         }
-
         .upload-card:hover {
             border-color: var(--primary);
         }
-
         .drop-zone {
             border: 3px dashed var(--text-dim);
             border-radius: 12px;
@@ -110,22 +98,18 @@
             cursor: pointer;
             margin: 2rem 0;
         }
-
         .drop-zone:hover,
         .drop-zone.dragover {
             border-color: var(--primary);
             background: rgba(255,107,53,0.08);
         }
-
         .drop-zone h2 {
             margin-bottom: 0.8rem;
             color: var(--text);
         }
-
         .drop-zone p {
             color: var(--text-dim);
         }
-
         .file-info {
             margin-top: 1.5rem;
             padding: 1rem;
@@ -134,11 +118,9 @@
             display: none;
             font-size: 0.95rem;
         }
-
         .preview-area {
             margin-top: 2.5rem;
         }
-
         .preview-table-wrapper {
             max-height: 360px;
             overflow-y: auto;
@@ -146,20 +128,17 @@
             border: 1px solid var(--dark-lighter);
             margin: 1.5rem 0;
         }
-
         .preview-table {
             width: 100%;
             border-collapse: collapse;
             font-size: 0.9rem;
         }
-
         .preview-table th,
         .preview-table td {
             padding: 0.9rem 1rem;
             text-align: left;
             border-bottom: 1px solid var(--dark);
         }
-
         .preview-table th {
             background: rgba(0,217,255,0.08);
             color: var(--accent);
@@ -168,7 +147,6 @@
             z-index: 1;
             font-weight: 600;
         }
-
         .status {
             padding: 1rem 1.5rem;
             border-radius: 10px;
@@ -177,15 +155,12 @@
             text-align: center;
             font-size: 1.05rem;
         }
-
         .success { background: var(--success); color: var(--dark); }
-        .error   { background: var(--error);   color: white; }
-
+        .error { background: var(--error); color: white; }
         .buttons {
             text-align: center;
             margin: 2rem 0;
         }
-
         .btn {
             padding: 0.9rem 2.2rem;
             border: none;
@@ -197,34 +172,27 @@
             transition: all 0.3s;
             margin: 0 0.6rem;
         }
-
         .btn:disabled {
             opacity: 0.5;
             cursor: not-allowed;
         }
-
         .btn-primary {
             background: linear-gradient(135deg, var(--primary), var(--accent));
             color: white;
         }
-
         .btn-primary:hover:not(:disabled) {
             transform: translateY(-2px);
             box-shadow: 0 8px 25px var(--shadow);
         }
-
         .btn-secondary {
             background: var(--dark-lighter);
             color: var(--text);
             border: 2px solid var(--text-dim);
         }
-
         .btn-secondary:hover {
             border-color: var(--primary);
         }
-
         .hidden { display: none !important; }
-
         .expected-cols {
             text-align: center;
             margin-top: 2.5rem;
@@ -232,7 +200,6 @@
             font-size: 0.95rem;
             line-height: 1.5;
         }
-
         @media (max-width: 700px) {
             body { padding: 1.2rem; }
             .upload-card { padding: 1.8rem; }
@@ -247,7 +214,7 @@
         <a href="admin.html" class="logo">Pingu Solar</a>
         <h1>Mass Job Upload (CSV)</h1>
         <p class="subtitle">Upload multiple jobs at once from a CSV file</p>
-        <a href="admin.html" class="back-home">← Back to Home</a>
+        <a href="admin.html" class="back-home">← Back to Admin Dashboard</a>
     </header>
 
     <div class="upload-card">
@@ -291,7 +258,7 @@
     </div>
 
     <div style="text-align: center; margin-top: 3rem;">
-        <a href="index.html" class="back-home" style="font-size: 1.1rem; padding: 1rem 2rem;">← Return to Home</a>
+        <a href="index.html" class="back-home" style="font-size: 1.1rem; padding: 1rem 2rem;">← Return to Main Site</a>
     </div>
 </div>
 
@@ -462,7 +429,7 @@
     });
 
     // ─── Upload to Firestore ─────────────────────────────────
-
+    //          CHANGED COLLECTION NAME HERE ↓↓↓
     uploadBtn.addEventListener('click', async () => {
         if (csvData.length === 0) return;
 
@@ -492,7 +459,8 @@
                     "status":                   (job["Status Update"] || "pending").toLowerCase()
                 };
 
-                await addDoc(collection(db, "jobs"), docData);
+                // ──────── Changed collection name here ────────
+                await addDoc(collection(db, "Solar-jobs"), docData);
                 success++;
             } catch (err) {
                 console.error("Upload error:", err);
